# monster-control-center-linux

./: CLAUDE.md  README.md  pyproject.toml
docs/: ai-workflow.md  application-services.md  architecture.md  domain-models.md  fake-backends.md  hardware-notes.md
